5th commit fixing spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -85,6 +85,10 @@ p.lead{
   padding-top: 8rem;
 }
 
+.pt-6{
+  padding-top: 6rem;
+}
+
 .mb-7{
   margin-bottom: 7rem;
 }
